kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/valid/002_operationReturnType.kmt

package root_package;

require kermeta
using kermeta::standard
using kermeta::exceptions

class Main
{

	operation test1(): Boolean is
	do 
		result := true 
	end
	
	operation test2(): Boolean is
	do 
		raise NotImplementedException.new
	end
	
	operation test3() : kermeta::standard::~Void is do 
		// TODO: implement 'main' operation
	end
	
	operation test4() : kermeta::standard::String is abstract
	
}